prodMetadata/src/objects/Pipeline_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Pipeline API settings</description>
    <fields>
        <fullName>API_Key__c</fullName>
        <label>API Key</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Point__c</fullName>
        <label>End Point</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirect_URL__c</fullName>
        <label>Redirect URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Secret_Key__c</fullName>
        <label>Secret Key</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Pipeline Settings</label>
</CustomObject>